--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <header>
   <div class="logo">
-    <img src="images/logo.svg" alt="logo" width="210px">  
+    <img src="images/logo.svg" alt="logo" width="210">  
   </div>
   <!-- <p>Huddle</p> -->
 </header>
@@ -25,14 +25,16 @@
   <main class="main">
     <div class="mock">
       <span class="mock">
-        <img src="images/illustration-mockups.svg" alt="mockup" width="700px">
+        <img src="images/illustration-mockups.svg" alt="mockup" width="700">
       </span>
     </div>
     <div class="content">
 
       <div class="title">
         <p>
-          Build The Community Your Fans Will Love
+          <h5>
+            Build The Community <br>Your Fans Will Love
+          </h5>
         </p>
       </div>
       <div class="subtitle">
@@ -40,14 +42,14 @@
         Create connections with your users as you engage in genuine discussion. 
       </div>
       <div class="button">
-        <a href="#" class="myButton">Register</a>
+        <a href="#" class="myButton" aria-label="button to register">Register</a>
         <!-- <button type="submit">Register</button> -->
       </div>
       
       <div class="sociallinks">
-        <div><a href="#"></a><i class="fa-brands fa-facebook-f"></i>&nbsp;</div>
-        <div><a href="#"></a><i class="fa-brands fa-twitter"></i></div>
-        <div><a href="#"></a><i class="fa-brands fa-instagram"></i></div>
+        <div><a href="#" aria-label="link for Facebook"></a><i class="fa-brands fa-facebook-f"></i>&nbsp;</div>
+        <div><a href="#" aria-label="link for Twitter"></a><i class="fa-brands fa-twitter"></i></div>
+        <div><a href="#" aria-label="link for Instagram"></a><i class="fa-brands fa-instagram"></i></div>
     </div>
     </div>
     
@@ -55,8 +57,8 @@
   
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Call Seven - 2021</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" aria-label="link to the chalenge"></a>>Frontend Mentor</a>. 
+      Coded by <a href="#" aria-label="Read more about the Author">Call Seven - 2021</a>.
     </p>
   </footer>
 </body>
